Implement deleteMessage
